client/styles/layout.css
#container {
	width: 100%;
}

header {
	position: fixed;
	top: 0;
	background: #fff;
	border-right: 1px solid rgba(0,0,0,0.05);
	overflow: hidden;
	font-size: 1.5rem;
	line-height: 3.5rem;
    padding: 0 30px;
	width: 100%;
	height: 3.5rem;
	border-bottom: 1px solid rgba(0,0,0,0.05);
	font-weight: 200;
}

.main {
    position: fixed;
    left: 3.5rem;
    top: 3.5rem;
    bottom: 3rem;
    right: 420px;
    padding: 20px;
    overflow-y: scroll;
}

aside {
    position: fixed;
    right: 0;
    top: 3.5rem;
    bottom: 3rem;
    padding: 20px;
    width: 400px;
    overflow-y: scroll;
}

aside input {
    width: 100%;
}

footer {
	position: fixed;
	bottom: 0;
	background: #fff;
	font-size: 1.2rem;
	line-height: 3rem;
	width: 100%;
	height: 3rem;
	border-top: 1px solid rgba(0,0,0,0.05);
    font-weight: 300;
}

footer input {
    border: none;
    width: 100%;
    height: 100%;
    padding-left: 60px;
}

#menuLeft {
	position: fixed;
    display: flex;
    flex-direction: column;
    overflow: scroll;
    padding: 10px;
    justify-content: flex-end;
	top: 3.5rem;
	bottom: 3rem;
	left: -10rem;
	width: 10rem;
	z-index: 1000;
	transition: left 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
	transition: width 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
}

#toggleLeft {
  	cursor:pointer;
	appearance:none;
	position: fixed;
	bottom: 0;
}

#toggleLeft + label {
	position:fixed;
	cursor:pointer;
	color: #FFF;
	line-height:2.8rem;
	left: 0;
	width: 2em;
	height: 2em;
	bottom: 0;
	z-index: 1000;
	font-size:1.3rem;
	text-align:center;
	-webkit-font-smoothing: antialiased;
	cursor: pointer;
}

#toggleLeft:checked ~ #menuLeft {
	left: 0;
}

#toggleLeft:checked ~ #container {
	width: 50rem;
	left: 10rem;
}


@media (min-width: 50rem) {
	html {
		font-size: 1.2rem;
    }

    #menuLeft {
		left: 0;
		width: 3rem;
	}
	#container {
		left: 3rem;
	}

	#toggleLeft:checked ~ #menuLeft {
		width: 10rem;
	}

	#toggleLeft:checked ~ #menuLeft span {
		display: inline;
	}

	#toggleLeft:checked ~ #container {
		left: 10rem;
		width: 100%;
	}

    .banner {
        margin: 30px 30px 0 30px;
    }

    .content {
        display: flex;
        flex-direction: row;
    }
    .main {
        flex-grow: 2;
    }
    aside {
        flex-grow: 1;
        margin-left: 30px;
        min-width: 300px;
    }

}

@media (min-width: 100rem) {
  html {
    font-size: 1.6rem; }
}

